# abcd

./: pyproject.toml  setup.py
.github/workflows/: opensearch.yml
abcd/: __init__.py  model.py
abcd/backends/: atoms_http.py  atoms_pymongo.py
abcd/parsers/: extras.py  queries_new.py
docs_src/: conf.py
tests/: __init__.py  database.py  parsers.py
