[tool.poetry]
name = "abcd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
ase = "^3.22.1"
lark = "^1.1.5"
luqum = "^0.13.0"
matplotlib = "^3.7.1"
notebook = "^6.5.4"
numpy = "^1.24.3"
opensearch-py = "^2.2.0"
pandas = "^2.0.3"
pymongo = "^4.3.3"
python = "^3.8"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
mongomock = "^4.1.2"
openmock = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
"abcd" = "abcd.frontends.commandline:main"
